--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Ana Rodríguez Portafolio</title>
 
-        <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+        <link rel="icon" type="svg+xml" href="favicon.svg" />
 
         <meta charset="UTF-8">
 
@@ -38,11 +38,11 @@
             integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-        <link rel="stylesheet" href="./css/main.css" type="text/css">
-        <link rel="stylesheet" href="./css/header.css" type="text/css">
-        <link rel="stylesheet" href="./css/home.css" type="text/css">
-        <link rel="stylesheet" href="./css/projects.css" type="text/css">
-        <link rel="stylesheet" href="./css/footer.css" type="text/css">
+        <link rel="stylesheet" href="main.css" type="text/css">
+        <link rel="stylesheet" href="header.css" type="text/css">
+        <link rel="stylesheet" href="home.css" type="text/css">
+        <link rel="stylesheet" href="projects.css" type="text/css">
+        <link rel="stylesheet" href="footer.css" type="text/css">
     </head>
 
     <body>
@@ -66,7 +66,7 @@
         
                 </div>
                 <div class="art-me">
-                    <img src="./img/me-icon.gif" alt="Me">
+                    <img src="me-icon.gif" alt="Me">
                 </div>
                 <div class="landing-page-socials">
                     <ul>
@@ -135,11 +135,11 @@
                 </div>
                 <div class="footer-column">
                     <a href="about.html" class="footer-button">
-                        <img src="./img/smile.svg" alt="Smile Icon">
+                        <img src="smile.svg" alt="Smile Icon">
                         About
                     </a>
                     <a href="mailto:anrodriguezme@gmail.com" class="footer-button">
-                        <img src="./img/email.svg" alt="Email Icon">
+                        <img src="email.svg" alt="Email Icon">
                         Contact
                     </a>
                 </div>
