--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <meta name="twitter:site" content="@anniedotexe">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="copyright" content="Annie Wu">
+        <meta name="copyright" content="Ana Rodriguez">
         <meta name="description" content="Hi! I'm Ana. Welcome to my portfolio.">
         <meta name="keywords"
             content="Annie Wu, Annie Wu Portfolio, Annie Wu Photography, photographer, developer, java, python, html, css, javascript, web developer, webdev, portfolio, quality assurance, qa engineer, quality assurance engineer">
@@ -32,23 +32,19 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-        <link rel="stylesheet" href="main.css">
-        <link rel="stylesheet" href="header.css">
-         <link rel="stylesheet" href="about.css">
-
-
-
+     
 
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
             integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-        <link rel="stylesheet" href="main.css" type="text/css">
-        <link rel="stylesheet" href="header.css" type="text/css">
-        <link rel="stylesheet" href="home.css" type="text/css">
-        <link rel="stylesheet" href="projects.css" type="text/css">
-        <link rel="stylesheet" href="footer.css" type="text/css">
+        <link rel="stylesheet" href="home.css">
+         <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="header.css">
+         <link rel="stylesheet" href="about.css">
+          <link rel="stylesheet" href="footer.css">
+        
     </head>
 
     <body>
