--- a/about.html
+++ b/about.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <title>About Me ~ Annie Wu</title>
+    <title>About Me ~ Ana Rodriguez</title>
 
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="svg+xml" href="favicon.svg" />
 
     <meta charset="UTF-8">
 
@@ -17,7 +17,7 @@
     <meta property="og:image" content="https://anniew.xyz/img/me-icon-smiling.png" />
 
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="About Me ~ Annie Wu">
+    <meta name="twitter:title" content="About Me ~ Ana Rodriguez">
     <meta name="twitter:description"
         content="Hi! I'm Annie. I have been working with computers and technology for most of my life being the go-to tech support for friends and family, and I am a self-taught web developer. I also enjoy photographing animals, places, and things on both digital and film.">
     <meta name="twitter:image" content="https://anniew.xyz/img/me-icon-smiling.png">
@@ -26,7 +26,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="copyright" content="Annie Wu">
     <meta name="description"
-        content="Hi! I'm Annie. I have been working with computers and technology for most of my life being the go-to tech support for friends and family, and I am a self-taught web developer. I also enjoy photographing animals, places, and things on both digital and film.">
+        content="on both digital and film.">
     <meta name="keywords"
         content="Annie Wu, Annie Wu Portfolio, Annie Wu Photography, photographer, developer, java, python, html, css, javascript, web developer, webdev, portfolio">
     <meta name="robots" content="noindex, nofollow" />
@@ -41,10 +41,10 @@
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="./css/main.css" type="text/css">
-    <link rel="stylesheet" href="./css/header.css" type="text/css">
-    <link rel="stylesheet" href="./css/about.css" type="text/css">
-    <link rel="stylesheet" href="./css/footer.css" type="text/css">
+    <link rel="stylesheet" href="main.css" ">
+    <link rel="stylesheet" href="header.css"">
+    <link rel="stylesheet" href="about.css" ">
+    <link rel="stylesheet" href="footer.css" >
 </head>
 
 <body>
@@ -54,7 +54,6 @@
             <div class="toggle"><i class="fas fa-bars"></i></div>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="about.html">About</a></li>
-                <li class="nav-item"><a href="projects.html">Projects</a></li>
             </ul>
         </nav>
     </header>
@@ -62,7 +61,7 @@
     <main class="main-container about-section">
         <section id="profile">
             <div class="page-title">
-                <img src="./img/mariposa.svg" alt="Mariposa Icon">
+                <img src="mariposa.svg" alt="Mariposa Icon">
                 <h2>ana.<span class="pink">profile</span></h2>
             </div>
             <p class="section-description">
@@ -74,7 +73,7 @@
             </p>
             <div class="profile-container">
                 <div class="me-icon-container">
-                    <img class="me-icon" src="./img/me-icon.gif"
+                    <img class="me-icon" src="me-icon.gif"
                         alt="Icon of myself with my bear puppy, Coconut, on top of my head"
                         title="Icon of me and Coconut. Art credits to my friend Steph.">
                 </div>
@@ -168,39 +167,39 @@
             <h3>Tech Stack</h3>
             <div class="tech-stack-container">
                 <div class="skill">
-                    <img src="./img/sql-svgrepo-com.svg" alt="SQL Icon"><span>SQL</span>
+                    <img src="sql-svgrepo-com.svg" alt="SQL Icon"><span>SQL</span>
                 </div>
                 <div class="skill">
-                    <img src="./img/git.svg" alt="Git Icon"><span>Git</span>
+                    <img src="git.svg" alt="Git Icon"><span>Git</span>
                 </div>
                 <div class="skill">
-                    <img src="./img/html5.svg" alt="HTML5 Icon"><span>HTML</span>
+                    <img src="html5.svg" alt="HTML5 Icon"><span>HTML</span>
                 </div>
                 <div class="skill">
-                    <img src="./img/css3.svg" alt="CSS3 Icon"><span>CSS3</span>
+                    <img src="css3.svg" alt="CSS3 Icon"><span>CSS3</span>
                 </div>
                 <div class="skill">
-                    <img src="./img/javascript.svg" alt="JavaScript Icon">
+                    <img src="javascript.svg" alt="JavaScript Icon">
                     <span>JavaScript</span>
                 </div>
                 <div class="skill">
-                    <img src="./img/java.svg" alt="Java Icon"><span>Java</span>
+                    <img src="java.svg" alt="Java Icon"><span>Java</span>
                 </div>
                 <div class="skill">
-                    <img src="./img/python.svg" alt="Python Icon"><span>Python</span>
+                    <img src="python.svg" alt="Python Icon"><span>Python</span>
                 </div>
                 <div class="skill">
-                    <img src="./img/vscode.svg" alt="VS Code Icon"><span>VS Code</span>
+                    <img src="vscode.svg" alt="VS Code Icon"><span>VS Code</span>
                 </div>
                 <div class="skill">
-                    <img src="./img/windows.svg" alt="Windows Icon"><span>Windows OS</span>
+                    <img src="windows.svg" alt="Windows Icon"><span>Windows OS</span>
                 </div>
                 <div class="skill">
-                    <img src="./img/computer.svg" alt="Computer Icon"><span>Computer
+                    <img src="computer.svg" alt="Computer Icon"><span>Computer
                         Hardware</span>
                 </div>
                 <div class="skill">
-                    <img src="./img/mysql-official.svg" alt="MySQL Icon"><span>MySQL</span>
+                    <img src="mysql-official.svg" alt="MySQL Icon"><span>MySQL</span>
                 </div>
             </div>
         </section>
@@ -270,11 +269,11 @@
             </div>
             <div class="footer-column">
                 <a href="about.html" class="footer-button">
-                    <img src="./img/smile.svg" alt="Smile Icon">
+                    <img src="smile.svg" alt="Smile Icon">
                     About
                 </a>
                 <a href="mailto:anrodriguezme@gmail.com" class="footer-button">
-                    <img src="./img/email.svg" alt="Email Icon">
+                    <img src="email.svg" alt="Email Icon">
                     Contact
                 </a>
             </div>
