--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
         <meta property="og:title" content="Ana Rodríguez" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="http://anniew.xyz" />
-        <meta property="og:description" content="Hi! I'm Annie. Welcome to my portfolio." />
+        <meta property="og:url" content="" />
+        <meta property="og:description" content="Hi! I'm Ana. Welcome to my portfolio." />
         <meta property="og:locale" content="en_US" />
-        <meta property="og:image" content="https://anniew.xyz/img/me-icon-smiling.png" />
+        <meta property="og:image" content="https://anniew.xyz/me-icon-smiling.png" />
 
         <meta name="twitter:card" content="summary">
-        <meta name="twitter:title" content="Annie Wu">
-        <meta name="twitter:description" content="Hi! I'm Annie. Welcome to my portfolio.">
+        <meta name="twitter:title" content="Ana Rodriguez">
+        <meta name="twitter:description" content="Hi! I'm Ana. Welcome to my portfolio.">
         <meta name="twitter:image" content="https://anniew.xyz/img/me-icon-smiling.png">
         <meta name="twitter:site" content="@anniedotexe">
 
