--- a/about.html
+++ b/about.html
@@ -30,6 +30,11 @@
     <meta name="keywords"
         content="Annie Wu, Annie Wu Portfolio, Annie Wu Photography, photographer, developer, java, python, html, css, javascript, web developer, webdev, portfolio">
     <meta name="robots" content="noindex, nofollow" />
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="footer.css" >
+    <link rel="stylesheet" href="home.css">
 
     <link rel="canonical" href="https://anniew.xyz/about" />
 
@@ -41,10 +46,7 @@
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="main.css" ">
-    <link rel="stylesheet" href="header.css"">
-    <link rel="stylesheet" href="about.css" ">
-    <link rel="stylesheet" href="footer.css" >
+    
 </head>
 
 <body>
