--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <link rel="stylesheet" href="header.css">
          <link rel="stylesheet" href="about.css">
           <link rel="stylesheet" href="footer.css">
+        <link rel="stylesheet" href="projects.css">
         
     </head>
 
