--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://anniew.xyz/about" />
     <meta property="og:description"
-        content="Hi! I'm Annie. I have been working with computers and technology for most of my life being the go-to tech support for friends and family, and I am a self-taught web developer. I also enjoy photographing animals, places, and things on both digital and film." />
+        content="Hi! I'm Ana. I have been working with computers and technology for most of my life being the go-to tech support for friends and family, and I am a self-taught web developer. I also enjoy photographing animals, places, and things on both digital and film." />
     <meta property="og:locale" content="en_US" />
     <meta property="og:image" content="https://anniew.xyz/img/me-icon-smiling.png" />
 
@@ -34,9 +34,7 @@
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="footer.css" >
-    <link rel="stylesheet" href="home.css">
 
-    <link rel="canonical" href="https://anniew.xyz/about" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
